--- a/.github/workflows/custom-docker.yml
+++ b/.github/workflows/custom-docker.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up QEMU # for multi-architecture builds
-        uses: docker/setup-qemu-action@v2
+      # - name: Set up QEMU # for multi-architecture builds
+      #   uses: docker/setup-qemu-action@v2
 
       - id: buildx
         uses: docker/setup-buildx-action@v2
@@ -46,7 +46,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ${{ env.CONTEXT }}
-          platforms: linux/amd64, linux/arm64
+          platforms: linux/amd64 #, linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
